[gd_scene load_steps=5 format=3 uid="uid://bl8t0m5y784wx"]

[ext_resource type="Script" path="res://Scenes/StartMenu/start_menu.gd" id="1_0swjh"]
[ext_resource type="Texture2D" uid="uid://d0v2e3amm3tua" path="res://Assets/platform.png" id="1_quj0m"]
[ext_resource type="PackedScene" uid="uid://dl21ysohu63ws" path="res://Scenes/Ball/ball.tscn" id="2_yn0ij"]
[ext_resource type="PackedScene" uid="uid://b6ernw55n5yvo" path="res://Scenes/platform.tscn" id="3_2i6f8"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_0swjh")

[node name="Black" type="Sprite2D" parent="."]
scale = Vector2(12, 7.8125)
texture = ExtResource("1_quj0m")
offset = Vector2(16, 16)

[node name="BallsAndWalls" type="Node" parent="."]

[node name="Balls" type="Node" parent="BallsAndWalls"]

[node name="Ball" parent="BallsAndWalls/Balls" instance=ExtResource("2_yn0ij")]
position = Vector2(294, 102)

[node name="Walls" type="Node" parent="BallsAndWalls"]

[node name="Wall" parent="BallsAndWalls/Walls" instance=ExtResource("3_2i6f8")]
visible = false
position = Vector2(74, 171)
scale = Vector2(2.625, 2.125)

[node name="Wall5" parent="BallsAndWalls/Walls" instance=ExtResource("3_2i6f8")]
visible = false
position = Vector2(192, 3)
scale = Vector2(12, 0.1875)

[node name="Wall4" parent="BallsAndWalls/Walls" instance=ExtResource("3_2i6f8")]
visible = false
position = Vector2(192, 247)
scale = Vector2(12, 0.1875)

[node name="Wall2" parent="BallsAndWalls/Walls" instance=ExtResource("3_2i6f8")]
visible = false
position = Vector2(3.75, 128)
scale = Vector2(0.234375, 7.625)

[node name="Wall3" parent="BallsAndWalls/Walls" instance=ExtResource("3_2i6f8")]
visible = false
position = Vector2(380.125, 128)
scale = Vector2(0.242188, 7.625)

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="Buttons" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PlayButton" type="Button" parent="Buttons"]
layout_mode = 2
offset_left = 32.0
offset_top = 137.0
offset_right = 73.0
offset_bottom = 168.0
size_flags_horizontal = 6
size_flags_vertical = 10
text = "Play"

[node name="ExitButton" type="Button" parent="Buttons"]
layout_mode = 2
offset_left = 79.0
offset_top = 137.0
offset_right = 116.0
offset_bottom = 168.0
size_flags_horizontal = 6
size_flags_vertical = 6
text = "Exit
"

[node name="CreditsButton" type="Button" parent="Buttons"]
layout_mode = 2
offset_left = 32.0
offset_top = 174.0
offset_right = 95.0
offset_bottom = 205.0
size_flags_horizontal = 6
size_flags_vertical = 2
text = "Credits
"
